--- a/estilos.css
+++ b/estilos.css
@@ -111,11 +111,25 @@ main {
     }
 
     .enlaces_container {
-        grid-template-columns: 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    .icon {
+        font-size: 30px;
+    }   
+    
+    .enlace p {
+        font-size: 16px;
     }
 
     .titulo h1 {
         font-size: 40px;
+    }
+
+    .informacion h2 {
+        text-align: center;
+        letter-spacing: 1px;
+        font-size: 20px
     }
 
     .titulo a {
