--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@200;300;400;500;600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Source+Sans+Pro:wght@400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Poppins:wght@500;600;700;900&family=Source+Sans+Pro:wght@400;700;900&display=swap');
 
 * {
     margin: 0;
@@ -18,6 +18,7 @@ body {
     background-size: auto;
     background-repeat: no-repeat;
     color: #000684;
+    /* font-family: 'Montserrat', sans-serif; */
     font-family: 'Barlow Semi Condensed', sans-serif;
 }
 
@@ -53,12 +54,13 @@ main {
 }
 
 .titulo h1 {
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 100px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 80px;
     font-weight: bold;
     letter-spacing: 0px;
+    line-height: 85px;
     text-shadow: 0px 0px 20px #464545;
-    transform: rotate(-5deg);
+    /* transform: rotate(-5deg); */
     -webkit-text-stroke: 1px #00FFFF;
 }
 
@@ -66,26 +68,33 @@ span.lpt {
     font-size: 40px;
 }
 
-.titulo a {
+.titulo .contacto {
     position: relative;
     top: 60px;
-    text-decoration: none;
     background: #FFFF00;
+    padding: 20px;
+    font-size: 25px;
+    font-weight: bold;
+    font-family: 'Poppins';
+    letter-spacing: 15px;
+}
+
+.titulo a {
+    text-decoration: none;
     padding: 20px;
     text-shadow: none;
     font-size: 20px;
     font-weight: bold;
-    border-radius: 10px;
-    box-shadow: 0 0 10px #464545;
 }
 
 .informacion {
-    margin-top: 80px;
+    margin-top: 120px;
 }
 
 .informacion h2 {
     text-align: center;
-    letter-spacing: 10px;
+    letter-spacing: 5px;
+    font-size: 40px;
 }
 
 .enlaces_container {
@@ -103,13 +112,21 @@ span.lpt {
     font-size: 100px;
 }
 
+.btn_fig_whatsapp {
+    padding: 10px;
+    color: #000684;
+    background: #04f05d;
+    font-family: 'Montserrat';
+    letter-spacing: 1px;
+}
+
 /* MEDIA QUERIES */
 
 @media (max-width: 820px) {
     lord-icon {
         display: inline !important;
     }
-    
+
     .container {
         grid-template-columns: 1fr;
         text-align: center;
