--- a/estilos.css
+++ b/estilos.css
@@ -135,6 +135,15 @@ span.lpt {
     .chicas img {
         display: none;
     }
+
+    .titulo .contacto {
+        font-size: 25px;
+        letter-spacing: 10px;
+    }
+
+    .informacion {
+        margin-top: 50px;
+    }
 }
 
 @media (max-width: 430px) {
@@ -184,7 +193,16 @@ span.lpt {
     }
 
     .titulo h1 {
-        font-size: 60px;
+        font-size: 50px;
+    }
+    
+    span.lpt {
+        font-size: 30px;
+    }
+
+    .titulo .contacto {
+        font-size: 22px;
+        letter-spacing: 0px;
     }
 
     .titulo a {
